--- a/tests/util/grub-fs-tester.in
+++ b/tests/util/grub-fs-tester.in
@@ -1125,6 +1125,36 @@ for ((LOGSECSIZE=MINLOGSECSIZE;LOGSECSIZE<=MAXLOGSECSIZE;LOGSECSIZE=LOGSECSIZE +
 
 	    case x"$fs" in
 		x"zfs"*)
+		    LSROUT=$(run_grubfstest ls -- -la "($GRUBDEVICE)/grub fs@/.");;
+		*)
+		    LSROUT=$(run_grubfstest ls -- -la "($GRUBDEVICE)/.");;
+	    esac
+	    if echo "$LSROUT" | grep -F " $BASEFILE" | grep "$BLOCKCNT" > /dev/null; then
+		:
+	    else
+		echo DOT IN ROOTDIR FAIL
+		echo "$LSROUT"
+		TZ=UTC ls --time-style=+%Y%m%d%H%M%S.%N -l "$MNTPOINTRO"
+		exit 1
+	    fi
+
+	    case x"$fs" in
+		x"zfs"*)
+		    LSROUT=$(run_grubfstest ls -- -la "($GRUBDEVICE)/grub fs@/..");;
+		*)
+		    LSROUT=$(run_grubfstest ls -- -la "($GRUBDEVICE)/..");;
+	    esac
+	    if echo "$LSROUT" | grep -F " $BASEFILE" | grep "$BLOCKCNT" > /dev/null; then
+		:
+	    else
+		echo DOTDOT IN ROOTDIR FAIL
+		echo "$LSROUT"
+		TZ=UTC ls --time-style=+%Y%m%d%H%M%S.%N -l "$MNTPOINTRO"
+		exit 1
+	    fi
+
+	    case x"$fs" in
+		x"zfs"*)
 		    LSROUT=$(run_grubfstest ls -- -l "($GRUBDEVICE)/grub fs@/////sdir");;
 		*)
 		    LSROUT=$(run_grubfstest ls -- -l "($GRUBDEVICE)/////sdir");;
@@ -1150,6 +1180,36 @@ for ((LOGSECSIZE=MINLOGSECSIZE;LOGSECSIZE<=MAXLOGSECSIZE;LOGSECSIZE=LOGSECSIZE +
 		echo PLIST FAIL
 		echo "$LSROUT"
 		TZ=UTC ls --time-style=+%Y%m%d%H%M%S.%N -l "$MNTPOINTRO/$PDIR"
+		exit 1
+	    fi
+
+	    case x"$fs" in
+		x"zfs"*)
+		    LSROUT=$(run_grubfstest ls -- -l "($GRUBDEVICE)/grub fs@/sdir/.");;
+		*)
+		    LSROUT=$(run_grubfstest ls -- -l "($GRUBDEVICE)/sdir/.");;
+	    esac
+	    if echo "$LSROUT" | grep -F " 2.img" | grep $BLOCKCNT > /dev/null; then
+		:
+	    else
+		echo DOT IN SUBDIR FAIL
+		echo "$LSROUT"
+		TZ=UTC ls --time-style=+%Y%m%d%H%M%S.%N -l "$MNTPOINTRO/$OSDIR/sdir"
+		exit 1
+	    fi
+
+	    case x"$fs" in
+		x"zfs"*)
+		    LSROUT=$(run_grubfstest ls -- -l "($GRUBDEVICE)/grub fs@/sdir/../sdir");;
+		*)
+		    LSROUT=$(run_grubfstest ls -- -l "($GRUBDEVICE)/sdir/../sdir");;
+	    esac
+	    if echo "$LSROUT" | grep -F " 2.img" | grep $BLOCKCNT > /dev/null; then
+		:
+	    else
+		echo DOTDOT IN SUBDIR FAIL
+		echo "$LSROUT"
+		TZ=UTC ls --time-style=+%Y%m%d%H%M%S.%N -l "$MNTPOINTRO/$OSDIR/ssdir"
 		exit 1
 	    fi
 
