Add friendly grub2 password config tool (#985962)
Provided a tool for users to reset the grub2 root user password
without having to alter the grub.cfg. The hashed password now
lives in a root-only-readable configuration file.

Resolves: rhbz#985962

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ grub-render-label
 grub-rpm-sort
 grub-script-check
 grub-set-default
+grub-setpassword
 grub-shell
 grub-shell-tester
 grub-sparc64-setup
